basic routes,middleware,some animation on login page

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,6 @@
-<%- include('authheader'); -%>
+<%- include('./partials/authheader'); -%>
 
-  <div class="modal-dialog text-center">
+  <div class="modal-dialog text-center" id="login">
     <div class="col-sm-9 main-section">
       <div class="modal-content">
 
@@ -25,7 +25,13 @@
       </div>
     </div>
   </div>
-
+  <ul class="slideshow">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
 
 
 
