--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,5 +1,5 @@
 
-<%- include('authheader'); -%>
+<%- include('./partials/authheader'); -%>
 
   <div class="modal-dialog text-center">
     <div class="col-sm-9 main-section">
