--- a/views/partials/authheader.ejs
+++ b/views/partials/authheader.ejs
@@ -8,6 +8,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 
