--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,8 @@
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
- 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 
 
 
@@ -32,7 +33,9 @@
         <li><a href="/login">Login</a></li>
         <li><a href="/register">Signup</a></li>
        <%}else{%>     
-      
+        <li><a href="/getdoctor">Doctors</a></li>
+        <li><a href="/getpatient">Patients</a></li>
+        <li><a href="/getappointment">Appointments</a></li>
         <li><a href="/logout">logout</a></li>
 
       </ul>
