added comments in doctor,patient and appointment routes

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -34,9 +34,9 @@
         <li><a href="/login">Login</a></li>
         <li><a href="/register">Signup</a></li>
        <%}else{%>     
-        <li><a href="/getdoctor">Doctors</a></li>
-        <li><a href="/getpatient">Patients</a></li>
-        <li><a href="/getappointment">Appointments</a></li>
+        <li><a href="/getDoctor">Doctors</a></li>
+        <li><a href="/getPatient">Patients</a></li>
+        <li><a href="/getAppointment">Appointments</a></li>
         <li><a href="/logout">logout</a></li>
 
       </ul>
